# libstereosgbm

./: .gitignore  Dockerfile  Makefile  README.md  docker_build.sh  docker_run.sh  ex_sobel.py  pyproject.toml  sgbm.py  sgbm_class.py  sgbm_class_edge.py  usb_cam.py  usb_cam_2.py  zed_sgbm.py
doc/: comparison_example.md  note.md
stereosgbm/: __init__.py  disparity_calculator.py
test/: test_calc_for_presaved.py  test_sgbm_class.py  test_sgbm_class_edge.py
