[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stereosgbm"
description = "library version for SGBM"
readme = "README.md"
version = "0.0.1"
authors = [
    {name = "katsunori-waragai", email="huyuhiko1128@gmail.com"},
]

requires-python = ">= 3.8"

dependencies = [
    "numpy>=1.18.0,<2",
    "opencv-python==3.4.18.65",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "pytest",
]

[project.urls]
Repository = "https://github.com/katsunori-waragai/libstereosgbm"

[tool.setuptools]
packages = ["stereosgbm"]

[tool.black]
line-length = 120
